ansible/roles/portainer/files/portainer-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  namespace: portainer
  annotations:
    haproxy.org/server-ssl: "true"
spec:
  rules:
    - host: kubernetes.arriaga.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portainer
                port:
                  number: 9443
